--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>React Hello World Template!</title><link href="./assets/css/home.css" rel="stylesheet"><link rel="shortcut icon" href="assets/images/icons/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/favicon-32x32.png">
-<link rel="manifest" href="assets/images/icons/manifest.json">
+<link rel="manifest" href="manifest.json">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#000">
 <meta name="application-name" content="React Hello World">
