--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
 
 <body>
     <div id="app"></div>
-    <script src="service-worker.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('service-worker.js');
+  });
+}
+    </script>
 </body>
 </html>
