--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,6 @@
 
 <body>
     <div id="app"></div>
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', function() {
-                navigator.serviceWorker.register('service-worker.js');
-            });
-        }
-    </script>
+    <script src="./assets/js/load-service-worker.js"></script>
 </body>
 </html>
